--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,7 +11,7 @@
 body {
 	background-color: $bg-primary;
 	color: $text-white;
-	font-family: "system-ui", sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-family: prompt_regular;
 }
 
